# ComfyUI_FMJ_SP

./: LICENSE  README.md  __init__.py  fmj_speed_prompt.py  install.json  pyproject.toml
.github/workflows/: main.yml
WF/: FMJ-SP.json
csv/: 01_FMJ_SP Collection 03.csv  Accidents Industry Malapris.csv  Actions.csv  Animals.csv  Artistic Style.csv  Artists.csv  Cameras.csv  Celebrity Man.csv  Celebrity Woman.csv  Edit Change Background.csv  Edit Character Consistency.csv  Edit Emotional Poses.csv  Edit Key Lora.csv  Edit Key Verbs.csv  Edit Nano Banana.csv  Edit Object Modification.csv  Edit Photo.csv  Edit Scene Transformation.csv  Edit Style Transfer.csv  Edit Text Editing.csv  Edit Transform Man v2.csv  Edit Transform Man.csv  Edit Transform Woman v2.csv  Edit Transform Woman.csv  Edit it's me 1.csv  Edit it's me 2.csv  Edit it's me.csv  Effects Realistic AdelAI.csv  Eras Malapris.csv  Erotic OCOMA.csv  Expressions Malapris.csv  Eyes Style.csv  Fashion.csv  Fictional Characters.csv  Films Realistic AdelAI.csv  Films Scenes Malapris.csv  Haircolors Thomas Buyle.csv  Haircuts Thomas Buyle.csv  Humanoids.csv  Image Quality.csv  (+27 more)
