[project]
name = "ComfyUI_FMJ_SP"
description = "Generate random prompts easily for FMJ."
version = "1.0.9"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/bulldog68/ComfyUI_FMJ_SP"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bulldog68"
DisplayName = "ComfyUI_FMJ_SP"
Icon = ""
